// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CallDetails Should match 1`] = `
.c12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  cursor: pointer;
  font-size: 14px;
  border: 1px solid #303338;
  background-color: transparent;
  color: #fff;
  border-radius: 32px;
  padding: 0.5rem 0.8rem;
  margin: 0.2rem;
  width: auto;
}

.c12:disabled {
  color: initial;
  opacity: 0.4;
  cursor: auto;
}

.c12:hover:enabled {
  border-color: #fff;
}

.c12:active:enabled {
  border: 1px solid #303338;
}

.c12:disabled {
  color: #303338;
}

.c7 {
  height: 1.6rem;
  width: 1.6rem;
}

.c0 {
  box-sizing: 'border-box';
  min-width: 0;
  margin: 1rem 0 0;
  padding: 0;
}

.c1 {
  box-sizing: 'border-box';
  min-width: 0;
  margin: 0;
  padding: 0;
}

.c5 {
  display: Flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: left;
  -webkit-justify-content: left;
  -ms-flex-pack: left;
  justify-content: left;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  border-radius: 10px;
  margin: 0;
  padding: 0;
}

.c8 {
  border-radius: 50%;
  height: 24px;
  width: 24px;
}

.c6 {
  margin-right: 0.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c14 {
  padding: 0.125rem 0.375rem;
  background-color: #303338;
  border-radius: 10px;
}

.c9 {
  color: #A1A6B0;
  margin-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
}

.c9:hover {
  cursor: pointer;
  color: #fff;
}

.c10 {
  margin-right: 0.5rem;
  overflow-wrap: break-word;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  color: #fff;
  margin-top: 0;
  white-space: pre-wrap;
}

.c4 {
  color: #A1A6B0;
  margin: 0;
}

.c15 {
  margin: 0;
  padding: 0;
  color: #fff;
  background-color: transparent;
}

.c11 {
  padding-top: 0.75rem;
}

.c13 {
  font-size: 12px;
  margin: 0;
  padding: 4px 8px;
}

<div>
   
  <div
    class="c0"
  >
    <div
      class="c1 c2 c3"
    >
      interactWith
       
      <span>
        0.0
         
        TST
      </span>
      :
    </div>
    <div
      class="c1 c2"
    >
      <div
        class="c1 c2 c4"
      >
        <div
          class="c5"
          data-testid="block-explorer-container"
          direction="row"
        >
          <span
            class="c6"
          >
            <img
              alt="Avatar"
              class="c7 c8"
              data-testid="avatar"
              size="24"
              src="test"
            />
          </span>
          <a
            class="c9"
            rel="noopener"
            target="_blank"
          >
            <div
              class="c1 c10"
            >
              test.eth
            </div>
            <svg
              fill="none"
              height="1em"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
              />
              <polyline
                points="15 3 21 3 21 9"
              />
              <line
                x1="10"
                x2="21"
                y1="14"
                y2="3"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c1 c11"
  >
    <button
      class="c12 c13"
    >
      transfer
       (
      <span>
        <span
          class="c14 c15"
          color="#fff"
        >
          address
        </span>
      </span>
      <span>
        <span>
          , 
        </span>
        <span
          class="c14 c15"
          color="#fff"
        >
          uint256
        </span>
      </span>
      )
    </button>
  </div>
   
</div>
`;

exports[`CallDetails Should match with empty data 1`] = `
.c12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  cursor: pointer;
  font-size: 14px;
  border: 1px solid #303338;
  background-color: transparent;
  color: #fff;
  border-radius: 32px;
  padding: 0.5rem 0.8rem;
  margin: 0.2rem;
  width: auto;
}

.c12:disabled {
  color: initial;
  opacity: 0.4;
  cursor: auto;
}

.c12:hover:enabled {
  border-color: #fff;
}

.c12:active:enabled {
  border: 1px solid #303338;
}

.c12:disabled {
  color: #303338;
}

.c7 {
  height: 1.6rem;
  width: 1.6rem;
}

.c0 {
  box-sizing: 'border-box';
  min-width: 0;
  margin: 0 0 1rem;
  padding: 0;
}

.c1 {
  box-sizing: 'border-box';
  min-width: 0;
  margin: 0;
  padding: 0;
}

.c17 {
  box-sizing: 'border-box';
  min-width: 0;
  margin: 1rem 0 0;
  padding: 0;
}

.c5 {
  display: Flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: left;
  -webkit-justify-content: left;
  -ms-flex-pack: left;
  justify-content: left;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  border-radius: 10px;
  margin: 0;
  padding: 0;
}

.c16 {
  width: 100%;
  min-width: 200px;
  height: 1px;
  background-color: #303338;
}

.c8 {
  border-radius: 50%;
  height: 24px;
  width: 24px;
}

.c6 {
  margin-right: 0.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c14 {
  padding: 0.125rem 0.375rem;
  background-color: #303338;
  border-radius: 10px;
}

.c9 {
  color: #A1A6B0;
  margin-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
}

.c9:hover {
  cursor: pointer;
  color: #fff;
}

.c10 {
  margin-right: 0.5rem;
  overflow-wrap: break-word;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  color: #fff;
  margin-top: 0;
  white-space: pre-wrap;
}

.c4 {
  color: #A1A6B0;
  margin: 0;
}

.c15 {
  margin: 0;
  padding: 0;
  color: #fff;
  background-color: transparent;
}

.c11 {
  padding-top: 0.75rem;
}

.c13 {
  font-size: 12px;
  margin: 0;
  padding: 4px 8px;
}

<div>
   
  <div
    class="c0"
  >
    <div
      class="c1 c2 c3"
    >
      interactWith
       
      <span>
        0.0
         
        TST
      </span>
      :
    </div>
    <div
      class="c1 c2"
    >
      <div
        class="c1 c2 c4"
      >
        <div
          class="c5"
          data-testid="block-explorer-container"
          direction="row"
        >
          <span
            class="c6"
          >
            <img
              alt="Avatar"
              class="c7 c8"
              data-testid="avatar"
              size="24"
              src="test"
            />
          </span>
          <a
            class="c9"
            rel="noopener"
            target="_blank"
          >
            <div
              class="c1 c10"
            >
              test.eth
            </div>
            <svg
              fill="none"
              height="1em"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
              />
              <polyline
                points="15 3 21 3 21 9"
              />
              <line
                x1="10"
                x2="21"
                y1="14"
                y2="3"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
    <div
      class="c1 c11"
    >
      <button
        class="c12 c13"
      >
        approve
         (
         
        <span
          class="c14 c15"
          color="#fff"
        >
          address
        </span>
        , 
        <span
          class="c14 c15"
          color="#fff"
        >
          uint256
        </span>
         
        )
      </button>
    </div>
  </div>
  <div
    class="c16"
  />
  <div
    class="c17"
  >
    <div
      class="c1 c2 c3"
    >
      interactWith
       
      <span>
        0.0
         
        TST
      </span>
      :
    </div>
    <div
      class="c1 c2"
    >
      <div
        class="c1 c2 c4"
      />
    </div>
  </div>
  <div
    class="c1 c11"
  >
    <button
      class="c12 c13"
    >
      transfer
       (
      <span>
        <span
          class="c14 c15"
          color="#fff"
        >
          address
        </span>
      </span>
      <span>
        <span>
          , 
        </span>
        <span
          class="c14 c15"
          color="#fff"
        >
          uint256
        </span>
      </span>
      )
    </button>
  </div>
   
</div>
`;
